# RAG-chatbot

./: .gitignore  README.md  config.yaml  docker-compose.yaml  dockerfile  functions.py  main.py  nginx.conf  pyproject.toml
pages/: login.py
