[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "langchain-community>=0.3.19",
    "langchain>=0.3.20",
    "llama-index>=0.12.22",
    "python-dotenv>=1.0.1",
    "streamlit>=1.43.0",
    "streamlit-authenticator>=0.4.2",
    "unstructured>=0.17.2",
    "python-docx>=1.1.2"
]

[tool.setuptools]
py-modules = ["main", "functions"]
